--- a/Home_Automation/package.json
+++ b/Home_Automation/package.json
@@ -8,19 +8,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "3.0.3",
+    "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "expo": "^39.0.4",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.2",
     "firebase": "7.9.0",
     "react": "16.13.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
+    "react-native-chart-kit": "^6.7.0",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-css-vh-vw": "^1.0.5",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
@@ -28,9 +34,12 @@
     "react-native-screens": "~2.10.1",
     "react-native-slider": "^0.11.0",
     "react-native-slider-picker": "^1.1.1",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-unimodules": "~0.11.0",
     "react-native-viewport-units": "0.0.5",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
