--- a/Home_Automation/package.json
+++ b/Home_Automation/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "d3": "^6.3.1",
     "expo": "^39.0.4",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
@@ -28,6 +29,7 @@
     "react-native-chart-kit": "^6.7.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-css-vh-vw": "^1.0.5",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
