--- a/Home_Automation/package.json
+++ b/Home_Automation/package.json
@@ -10,41 +10,42 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/slider": "3.0.3",
+    "@react-native-community/slider": "4.1.7",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "d3": "^6.3.1",
-    "expo": "^39.0.4",
-    "expo-splash-screen": "~0.6.2",
-    "expo-status-bar": "~1.0.2",
-    "expo-updates": "~0.3.2",
-    "firebase": "7.9.0",
-    "react": "16.13.1",
+    "expo": "^43.0.0",
+    "expo-splash-screen": "~0.13.4",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.5",
+    "firebase": "^8.10.0",
+    "react": "17.0.1",
     "react-chartjs-2": "^2.11.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.3",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.2",
     "react-native-chart-kit": "^6.7.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-css-vh-vw": "^1.0.5",
     "react-native-elements": "^3.0.0-alpha.1",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-slider": "^0.11.0",
     "react-native-slider-picker": "^1.1.1",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-unimodules": "~0.11.0",
+    "react-native-unimodules": "~0.15.0",
     "react-native-viewport-units": "0.0.5",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "victory-native": "^35.3.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.12.9",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
     "react-test-renderer": "~16.13.1"
