--- a/Home_Automation/package.json
+++ b/Home_Automation/package.json
@@ -11,7 +11,6 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "4.1.7",
-    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -42,7 +41,8 @@
     "react-native-unimodules": "~0.15.0",
     "react-native-viewport-units": "0.0.5",
     "react-native-web": "0.17.1",
-    "victory-native": "^35.3.1"
+    "victory-native": "^35.3.1",
+    "@react-native-community/datetimepicker": "3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
