agregada propiedad splash para pantalla de inicio

--- a/Home_Automation/app.json
+++ b/Home_Automation/app.json
@@ -6,6 +6,10 @@
     "slug": "Home_Automation",
     "version": "1.0.0",
     "backgroundColor": "#4a83b5",
+    "splash": {
+      "image": "./splashScreen2.png",
+      "resizeMode": "cover"
+    },
     "assetBundlePatterns": [
       "**/*"
     ]
