pantallas finales con antiguo sdk

--- a/Home_Automation/package.json
+++ b/Home_Automation/package.json
@@ -13,8 +13,9 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "4.1.7",
     "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^5.14.9",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "d3": "^6.3.1",
@@ -27,6 +28,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-chart-kit": "^6.7.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-css-vh-vw": "^1.0.5",
